# reprof

./: Build.PL.in  ChangeLog  Makefile.am  Makefile.in  README.md  config.conf  configure  configure.ac  reprof.spec.in
cfg/: nntrain  setbench  setbench_dna  setbench_dna_hh  setbench_dna_nr  setbench_hh  setbench_nr  setconvert  train.setconvert
data/: align.pl  create_traindata.pl  dssp2fasta.pl  reduce_align.pl
data/fasta/: pdb_diffraction_max2A_min60_hval0_hval0.fasta
data/lists/: pdb_diffraction_max2A.list  pdb_nmr.list
data/nets/: tseqlayer.s3.w21.h100.lr0.01.lm0.1.p1.net  w11.h100.lr0.01.lm0.1.p0.ns1.SEQLAYER.net  w11.h100.lr0.7.lm0.p0.ns1.SEQLAYER.net  w11.h100.lr0.7.lm0.p1.ns1.SEQLAYER.net  w11.h110.lr0.01.lm0.1.p0.ns1.SEQLAYER.net  w11.h110.lr0.01.lm0.1.p1.ns1.SEQLAYER.net  w11.h120.lr0.01.lm0.1.p0.ns1.SEQLAYER.net  w11.h120.lr0.01.lm0.1.p1.ns1.SEQLAYER.net  w11.h120.lr0.7.lm0.p0.ns1.SEQLAYER.net  w11.h120.lr0.7.lm0.p1.ns1.SEQLAYER.net  w11.h130.lr0.01.lm0.1.p0.ns1.SEQLAYER.net  w11.h130.lr0.01.lm0.1.p1.ns1.SEQLAYER.net  w11.h130.lr0.7.lm0.p1.ns1.SEQLAYER.net  w11.h140.lr0.01.lm0.1.p0.ns1.SEQLAYER.net  w11.h140.lr0.01.lm0.1.p1.ns1.SEQLAYER.net  w11.h140.lr0.7.lm0.p0.ns1.SEQLAYER.net  w11.h140.lr0.7.lm0.p1.ns1.SEQLAYER.net  w11.h150.lr0.01.lm0.1.p1.ns1.SEQLAYER.net  w11.h150.lr0.7.lm0.p1.ns1.SEQLAYER.net  w11.h160.lr0.01.lm0.1.p1.ns1.SEQLAYER.net  w11.h160.lr0.7.lm0.p0.ns1.SEQLAYER.net  w11.h170.lr0.01.lm0.1.p0.ns1.SEQLAYER.net  w11.h170.lr0.01.lm0.1.p1.ns1.SEQLAYER.net  w11.h170.lr0.7.lm0.p1.ns1.SEQLAYER.net  w11.h180.lr0.7.lm0.p1.ns1.SEQLAYER.net  w11.h190.lr0.01.lm0.1.p0.ns1.SEQLAYER.net  w11.h190.lr0.01.lm0.1.p1.ns1.SEQLAYER.net  w11.h190.lr0.7.lm0.p0.ns1.SEQLAYER.net  w11.h190.lr0.7.lm0.p1.ns1.SEQLAYER.net  w11.h200.lr0.01.lm0.1.p0.ns1.SEQLAYER.net  w11.h200.lr0.7.lm0.p1.ns1.SEQLAYER.net  w11.h30.lr0.01.lm0.1.p0.ns1.SEQLAYER.net  w11.h30.lr0.7.lm0.p0.ns1.SEQLAYER.net  w11.h40.lr0.01.lm0.1.p0.ns1.SEQLAYER.net  w11.h40.lr0.01.lm0.1.p1.ns1.SEQLAYER.net  w11.h40.lr0.7.lm0.p0.ns1.SEQLAYER.net  w11.h40.lr0.7.lm0.p1.ns1.SEQLAYER.net  w11.h50.lr0.01.lm0.1.p1.ns1.SEQLAYER.net  w11.h50.lr0.7.lm0.p1.ns1.SEQLAYER.net  w11.h60.lr0.01.lm0.1.p0.ns1.SEQLAYER.net  (+640 more)
data/pssm/: 1a1w:A0.pssm  1a3a:C2.pssm  1a5r:A0.pssm  1a6s:A0.pssm  1a6x:A0.pssm  1a7e:A0.pssm  1a7m:A0.pssm  (+5450 more)
deb/: reprof_1.0-1.dsc  reprof_1.0-1_amd64.changes
deb/reprof-1.0/scripts/: Makefile  Makefile.am  Makefile.in  reprof.1
debian/: changelog  control  copyright  librg-reprof-bundle-perl.install  reprof.install  rules  watch
examples/: Makefile.am  Makefile.in
lib/: Makefile.in
lib/RG/: Makefile.am  Makefile.in  Reprof.pm.mk
lib/RG/Reprof/: Converter.pm  Makefile.in  Reprof.pm  blastPsiMat.pm  fasta.pm
nnet/: train.pl
old/: rsyncPDB.sh
qsub/: qsub_align.pl  qsub_pssms.pl  qsub_train.pl
scripts/: Makefile.am  Makefile.in  benchmark_acc.pl  benchmark_prof.pl  benchmark_runtime.pl  benchmark_runtime2.pl  benchmark_sec.pl  chain_counts.pl  check_results.pl  convert_dssp2fasta.pl  create_seqlayer_sets.pl  create_struclayer_sets.pl  do_all_redisis.pl  dssp2fasta.pl  dssps_to_fasta.pl  extend_pdb_entry_type.pl  jury.pl  net_runner.pl  nntrain.pl  pretty_dssp.pl  pretty_plot.pl  psipred_all.pl  qsub_align.pl  qsub_example.pl  qsub_pssms.pl  qsub_train.pl  redisis.pl  reduce_align.pl  remove_multichain.pl  reprof  reprof.pl  reprof_all.pl  reprof_v1.pl  run_alignments.pl  run_reprof.pl  setbench.pl  setconvert.pl  shuffle_fasta.pl  sort_results.pl  split_fasta.pl  (+3 more)
scripts/benchmark/: benchmark_redisis.pl  benchmark_reprof.pl
scripts/data/: create_traindata.pl  extend_pdb_entry_type.pl  reduce_list.pl
scripts/data_preprocessing/: bisis_all.pl  blast2hval.pl  clean_fasta.pl  dssp2fasta.pl  fasta2bind.pl  fasta_shuffle.pl  fastamulti2single.pl  hhblits_all.pl  hval2delete.pl  menden2sets.pl  pdblist2fasta.pl  pdi_extract.pl  pp_all.pl  reduce_redundancy.pl  regex_fasta.pl  remove_multichain.pl  split_sets.pl
scripts/old/: data2filedb.pl  dsspAll.pl  qsub_pssms.pl  qsub_train.pl  rsyncDSSP.sh
scripts/pretty/: easyplot.pl
scripts/util/: checkJobs.sh  count_acc.pl  count_ids.pl  create_script.pl  do_all_strucsets.pl  getrndfiles.pl  hash_fasta.pl  test.pl
share/: Makefile.am  Makefile.in  a.model  fb.model  uu.model
(+1506 files in other folders)
